--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.jwt.client_id=tracom
 spring.jwt.client_secret=password
 spring.demo.jwt.private_key=secret
 spring.demo.jwt.public_key=publicsecret
+
+
+#spring.datasource.url=
