--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,40 @@
 spring.jwt.client_id=tracom
 spring.jwt.client_secret=password
-spring.demo.jwt.private_key=secret
-spring.demo.jwt.public_key=publicsecret
 
+# ==================================================================
+# = DATA SOURCE
+# ==================================================================
 
-#spring.datasource.url=
+# Set configurations for the database connection
+
+#Connection url for database
+spring.datasource.url= jdbc:mysql://localhost:3306/user_security?createDatabaseIfNotExist=true
+
+# Username and Password
+spring.datasource.username= root
+spring.datasource.password=
+
+#Keep connection alive if idle for a long time(needed in production)
+spring.datasource.dbcp2.test-while-idle= true
+spring.datasource.dbcp2.validation-query= SELECT 1
+
+# =====================================================================
+# = JPA/HIBERNATE
+# =====================================================================
+
+#show or not log for each sql query
+spring.jpa.show-sql= true
+
+#Hibernate ddl auto
+spring.jpa.hibernate.ddl-auto= update
+
+#Naming strategy
+spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#Allow Hibernate to generate SQL
+spring.jpa.properties.hibernate.dialect =  org.hibernate.dialect.MySQL5Dialect
+
+# ===========================================================================
+# = FlyWay
+# ===========================================================================
+flyway.user=
