--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,1 +1,11 @@
+#Email
 email.notempty= Please provide valid email id.
+email.valid= Please provide a valid email
+
+#Password
+password.notempty= Please provide a password
+password.length= Password length must be greater than 8
+
+#Username
+username.notempty= Please provide a username
+username.length= Username length must be greater than 3
