--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.jwt.client_secret=password
 # Set configurations for the database connection
 
 #Connection url for database
-spring.datasource.url= jdbc:mysql://localhost:3306/user_security?createDatabaseIfNotExist=true
+#spring.datasource.url= jdbc:mysql://localhost:3306/user_security?createDatabaseIfNotExist=true
 
 # Username and Password
-spring.datasource.username= root
-spring.datasource.password=
+#spring.datasource.username= root
+#spring.datasource.password=
 
 #Keep connection alive if idle for a long time(needed in production)
 spring.datasource.dbcp2.test-while-idle= true
@@ -23,7 +23,11 @@ spring.datasource.dbcp2.validation-query= SELECT 1
 # =====================================================================
 
 #show or not log for each sql query
-spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql=true
+
+#logging via logger
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #Hibernate ddl auto
 spring.jpa.hibernate.ddl-auto= update
