--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,11 @@ spring.jwt.client_secret=password
 #Connection url for database
 #spring.datasource.url= jdbc:mysql://localhost:3306/user_security?createDatabaseIfNotExist=true
 
-# Username and Password
+ #Username and Password
 #spring.datasource.username= root
 #spring.datasource.password=
+
+server.port=8081
 
 #Keep connection alive if idle for a long time(needed in production)
 spring.datasource.dbcp2.test-while-idle= true
@@ -31,10 +33,24 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #Hibernate ddl auto
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto=create
 
 #Naming strategy
 spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #Allow Hibernate to generate SQL
 spring.jpa.properties.hibernate.dialect =  org.hibernate.dialect.MySQL5Dialect
+
+#max file and request size
+spring.servlet.multipart.file-size-threshold=10MB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+
+#==================================================================================
+# = MPESA
+# =================================================================================
+mpesa.api.key=5RxwrWrtFuMUEKbSIbuHncq2DiyJgsR0
+mpesa.api.secret=jbziP0ftMRHWnGW2
+mpesa.api.url=https://sandbox.safaricom.co.ke/oauth/v1/generate?grant_type=client_credentials
+mpesa.api.url.c2b=https://sandbox.safaricom.co.ke/mpesa/c2b/v1/registerurl
+mpesa.api.url.simulate_url = https://sandbox.safaricom.co.ke/mpesa/c2b/v1/simulate
